const _ = require('lodash');
const fs = require('fs');
const os = require('os');
const DetoxConfigErrorBuilder = require('./DetoxConfigErrorBuilder');

describe('DetoxConfigErrorBuilder', () => {
  /** @type DetoxConfigErrorBuilder */
  let builder;
  let build;
  let config;

  let stubBuild = () => {
    build = () => 'TODO';
  };

  beforeEach(() => {
    /** @type Detox.DetoxConfig */
    config = {
      devices: {
        aDevice: {
          type: 'ios.simulator',
          device: {
            type: 'iPhone 12',
          },
        }
      },
      apps: {
        someApp: {
          type: 'ios.app',
          binaryPath: 'path/to/app',
        },
      },
      configurations: {
        plain: {
          type: 'android.emulator',
          device: 'Pixel_3a_API_30_x86',
          binaryPath: 'path/to/apk',
        },
        aliased: {
          device: 'aDevice',
          apps: ['someApp'],
        },
        inlined: {
          device: null,
          app: null,
        },
        inlinedMulti: {
          device: null,
          apps: [],
        },
      },
    };

    config.configurations.inlined.device = { ...config.devices.aDevice };
    config.configurations.inlined.app = { ...config.apps.someApp };
    config.configurations.inlinedMulti.device = { ...config.devices.aDevice };
    config.configurations.inlinedMulti.apps = [{ ...config.apps.someApp }];

    builder = new DetoxConfigErrorBuilder()
      .setDetoxConfigPath('/home/detox/myproject/.detoxrc.json')
      .setDetoxConfig(config);
  });

  describe('(from configuration/index)', () => {
    describe('.noConfigurationSpecified', () => {
      beforeEach(() => {
        build = () => builder.noConfigurationSpecified();
      });

      it('should create error 1, if the configuration file is not package.json', () => {
        builder.setDetoxConfigPath('somethingElse');
        expect(build()).toMatchSnapshot();
      });

      it('should create error 2, if the configuration file is package.json', () => {
        builder.setDetoxConfigPath('/home/detox/myproject/package.json');
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.noConfigurationAtGivenPath', () => {
      it('should create an error with the attempted config path', () => {
        expect(builder.noConfigurationAtGivenPath()).toMatchSnapshot();
      });
    });

    describe('.failedToReadConfiguration', () => {
      it('should create a generic error, if I/O error is unknown', () => {
        expect(builder.failedToReadConfiguration()).toMatchSnapshot();
      });

      it('should create a simple error, but with the original intercepted IO error', () => {
        const ioError = _.attempt(() => fs.readFileSync(os.homedir()));
        expect(builder.failedToReadConfiguration(ioError)).toMatchSnapshot();
      });
    });

    describe('.noConfigurationsInside', () => {
      beforeEach(() => {
        config.configurations = {};
        build = () => builder.noConfigurationsInside();
      });

      it('should create a generic error if all is unknown', () => {
        builder.setDetoxConfig(null);
        builder.setDetoxConfigPath('');

        expect(build()).toMatchSnapshot();
      });

      it('should create an error with Detox config fragment, if the path is not known', () => {
        builder.setDetoxConfigPath('');
        expect(build()).toMatchSnapshot();
      });

      it('should create an error with Detox config location hint, if it is known', () => {
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.cantChooseConfiguration', () => {
      beforeEach(() => {
        build = () => builder.cantChooseConfiguration();
      });

      it('should create an error with --configuration suggestions', () => {
        builder.setDetoxConfigPath('/etc/detox/config.js');
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.noConfigurationWithGivenName', () => {
      beforeEach(() => {
        build = () => builder.noConfigurationWithGivenName();
        builder.setConfigurationName('otherConf')
      });

      it('should create an error with configuration suggestions', () => {
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.configurationShouldNotBeEmpty', () => {
      beforeEach(() => {
        build = () => builder.configurationShouldNotBeEmpty();
        builder.setConfigurationName('empty')
        config.configurations.empty = {};
      });

      it('should create a helpful error', () => {
        expect(build()).toMatchSnapshot();
      });
    });
  });

  describe('(from composeDeviceConfig)', () => {
    describe('.thereAreNoDeviceConfigs', () => {
      beforeEach(() => {
        build = () => builder.thereAreNoDeviceConfigs('aDevice');
        config.devices = {};
        builder.setConfigurationName('aliased')
      });

      it('should create an error with a hint', () => {
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.cantResolveDeviceAlias', () => {
      it('should create a helpful error', () => {
        builder.setConfigurationName('aliased');
        expect(builder.cantResolveDeviceAlias('otherDevice')).toMatchSnapshot();
      });
    });

    describe('.malformedUtilBinaryPaths', () => {
      beforeEach(() => {
        build = (alias) => builder.malformedUtilBinaryPaths(alias);
      });

      it('should create an error for plain configuration', () => {
        builder.setConfigurationName('plain');
        config.configurations.plain.utilBinaryPaths = 'invalid';
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for inlined configuration', () => {
        builder.setConfigurationName('inlined');
        config.configurations.inlined.device.utilBinaryPaths = 'invalid';
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for aliased configuration', () => {
        builder.setConfigurationName('aliased');
        config.devices.aDevice.utilBinaryPaths = 'invalid';
        expect(build('aDevice')).toMatchSnapshot();
      });
    });

    describe('.deviceConfigIsUndefined', () => {
      beforeEach(() => {
        build = () => builder.deviceConfigIsUndefined();
      });

      it('should produce a helpful error', () => {
        builder.setConfigurationName('plain');
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.missingDeviceType', () => {
      beforeEach(() => {
        build = (alias) => builder.missingDeviceType(alias);
      });

      it('should create an error for inlined configuration', () => {
        delete config.configurations.inlined.device.type;
        builder.setConfigurationName('inlined');
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for aliased configuration', () => {
        delete config.devices.aDevice.type;
        builder.setConfigurationName('aliased');
        expect(build('aDevice')).toMatchSnapshot();
      });
    });

    describe('.missingDeviceMatcherProperties', () => {
      beforeEach(() => {
        build = (alias) => builder.missingDeviceMatcherProperties(alias, ['foo', 'bar']);
      });

      it('should work with plain configurations', () => {
        builder.setConfigurationName('plain');
        expect(build()).toMatchSnapshot();
      });

      it('should work with inlined configurations', () => {
        builder.setConfigurationName('inlined');
        expect(build()).toMatchSnapshot();
      });

      it('should work with aliased configurations', () => {
        builder.setConfigurationName('aliased');
        expect(build('aDevice')).toMatchSnapshot();
      });
    });
  });

  describe('(from composeAppsConfig)', () => {
    describe('.thereAreNoAppConfigs', () => {
      it('should create an error for aliased configuration', () => {
        delete config.apps.someApp;
        builder.setConfigurationName('aliased')

        expect(builder.thereAreNoAppConfigs('someApp')).toMatchSnapshot();
      });
    });

    describe('.cantResolveAppAlias', () => {
      it('should create an error for aliased configuration', () => {
        builder.setConfigurationName('aliased')
        expect(builder.cantResolveDeviceAlias('anotherApp')).toMatchSnapshot();
      });
    });

    describe('.appConfigIsUndefined', () => {
      beforeEach(() => {
        build = (appPath) => builder.appConfigIsUndefined(appPath);
        builder.setConfigurationName('android.release');
      });

      it('should take into account if it is "app" missing', () => {
        expect(build(['configurations', 'android.release', 'app'])).toMatchSnapshot();
      });

      it('should take into account if it is "apps" array has an empty element', () => {
        expect(build(['configurations', 'android.release', 'apps', 0])).toMatchSnapshot();
      });
    });

    describe('.missingAppBinaryPath', () => {
      beforeEach(() => {
        build = (appPath) => builder.missingAppBinaryPath(appPath);
      });

      it('should create an error for plain configuration', () => {
        builder.setConfigurationName('plain');
        delete config.configurations.plain.binaryPath;
        expect(build(['configurations', 'plain'])).toMatchSnapshot();
      });

      it('should create an error for aliased configuration', () => {
        builder.setConfigurationName('aliased');
        delete config.apps.someApp.binaryPath;
        expect(build(['apps', 'someApp'])).toMatchSnapshot();
      });

      it('should create an error for inlined configuration', () => {
        builder.setConfigurationName('inlined');
        delete config.configurations.inlined.app.binaryPath;
        expect(build(['configurations', 'inlined', 'app'])).toMatchSnapshot();
      });

      it('should create an error for inlined multi-app configuration', () => {
        builder.setConfigurationName('inlinedMulti');
        delete config.configurations.inlinedMulti.apps[0].binaryPath;
        expect(build(['configurations', 'inlined', 'apps', 0])).toMatchSnapshot();
      });
    });

    describe('.invalidAppType', () => {
      beforeEach(() => {
        build = (appPath) => builder.invalidAppType(appPath);
      });

      it('should create an error for aliased configuration', () => {
        builder.setConfigurationName('aliased');
        config.apps.someApp.type = 'invalid.app';
        expect(build(['apps', 'someApp'])).toMatchSnapshot();
      });

      it('should create an error for inlined configuration', () => {
        builder.setConfigurationName('inlined');
        config.configurations.inlined.app.type = 'invalid.app';
        expect(build(['configurations', 'inlined', 'apps', 0])).toMatchSnapshot();
      });
    });

    describe('.duplicateAppConfig', () => {
      beforeEach(stubBuild);

      it('should create an error for plain configuration', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for aliased configuration', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for inlined configuration', () => {
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.noAppIsDefined', () => {
      beforeEach(() => {
        build = (deviceType) => builder.noAppIsDefined(deviceType);
        builder.setConfigurationName('android.release');
      });

      it('should create same versions for device subtypes', () => {
        expect(build('ios.simulator')).toEqual(build('ios.none'));
        expect(build('android.emulator')).toEqual(build('android.attached'));
        expect(build('android.emulator')).toEqual(build('android.genycloud'));
      });

      it('should create different versions depending on device type', () => {
        expect(build('ios.simulator')).not.toEqual(build('android.emulator'));
        expect(build('ios.simulator')).not.toEqual(build('./stub/driver'));
        expect(build('android.emulator')).not.toEqual(build('./stub/driver'));
      });

      it('should produce iOS-specific error message', () => {
        expect(build('ios.simulator')).toMatchSnapshot();
      });

      it('should produce Android-specific error message', () => {
        expect(build('android.genycloud')).toMatchSnapshot();
      });

      it('should produce a custom error message for unknown device type', () => {
        expect(build('unknown')).toMatchSnapshot();
      });
    });

    describe('.multipleAppsConfigArrayTypo', () => {
      beforeEach(stubBuild);

      it('should create an error for plain configuration', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for aliased configuration', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for inlined configuration', () => {
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.multipleAppsConfigShouldBeArray', () => {
      beforeEach(stubBuild);

      it('should create an error for plain configuration', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for aliased configuration', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error for inlined configuration', () => {
        expect(build()).toMatchSnapshot();
      });
    });
  });

  describe('(from composeSessionConfig)', () => {
    describe('.invalidServerProperty', () => {
      beforeEach(() => {
        build = () => builder.invalidServerProperty();
        builder.setConfigurationName('android.release');
        builder.setDetoxConfig({
          session: {
            server: 'localhost',
          },
          configurations: {
            'android.release': {
              type: 'android.emulator',
              device: {
                avdName: 'Pixel_2_API_29'
              }
            }
          }
        });
      });

      it('should create a generic error, if the config location is not known', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error with a hint, if the config location is known', () => {
        builder.setDetoxConfigPath('/home/detox/myproject/.detoxrc.json');
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.invalidSessionId', () => {
      beforeEach(() => {
        build = () => builder.invalidSessionIdProperty();
        builder.setConfigurationName('android.release');
        builder.setDetoxConfig({
          configurations: {
            'android.release': {
              type: 'android.emulator',
              device: {
                avdName: 'Pixel_2_API_29',
              },
              session: {
                sessionId: 234589798234,
              },
            }
          }
        });
      });

      it('should create a generic error, if the config location is not known', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error with a hint, if the config location is known', () => {
        builder.setDetoxConfigPath('/home/detox/myproject/.detoxrc.json');
        expect(build()).toMatchSnapshot();
      });

      it('should point to global session if there is one', () => {
        builder.setDetoxConfig({
          session: {
            server: 'ws://localhost:12837',
          },
          configurations: {},
        })

        builder.setDetoxConfigPath('/home/detox/myproject/.detoxrc.json');
        expect(build()).toMatchSnapshot();
      });
    });

    describe('.invalidDebugSynchronizationProperty', () => {
      beforeEach(() => {
        build = () => builder.invalidDebugSynchronizationProperty();
        builder.setConfigurationName('android.release');
        builder.setDetoxConfig({
          configurations: {
            'android.release': {
              type: 'android.emulator',
              device: {
                avdName: 'Pixel_2_API_29',
              },
              session: {
                debugSynchronization: '3000',
              },
            }
          }
        });
      });

      it('should create a generic error, if the config location is not known', () => {
        expect(build()).toMatchSnapshot();
      });

      it('should create an error with a hint, if the config location is known', () => {
        builder.setDetoxConfigPath('/home/detox/myproject/.detoxrc.json');
        expect(build()).toMatchSnapshot();
      });

      it('should point to global session if there is one', () => {
        builder.setDetoxConfig({
          session: {
            server: 'ws://localhost:12837',
          },
          configurations: {},
        })

        builder.setDetoxConfigPath('/home/detox/myproject/.detoxrc.json');
        expect(build()).toMatchSnapshot();
      });
    });
  });

  describe('(from local-cli/build)', () => {
    beforeEach(() => {
      build = () => builder.missingBuildScript();
      builder.setConfigurationName('android.release');
      builder.setDetoxConfig({
        configurations: {
          'android.release': {
            type: 'android.emulator',
            device: {
              avdName: 'Pixel_2_API_29'
            }
          }
        }
      });
    });

    it('should create a generic error, if the config location is not known', () => {
      expect(build()).toMatchSnapshot();
    });

    it('should create an error with a hint, if the config location is known', () => {
      builder.setDetoxConfigPath('/home/detox/myproject/.detoxrc.json');
      expect(build()).toMatchSnapshot();
    });
  });
});
